Fixed white space issue in header, created new container

--- a/main/css/home.less
+++ b/main/css/home.less
@@ -3,18 +3,19 @@ body {
 }
 
 #splash {
-	padding: 0;
-    margin: 0;
     width: 100%;
+    background: red;
+    background: url(../images/crowd.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .splash-back {
+  padding: 0;
+  margin: 0 auto;
   width: 100%;
   height: 500px;
-  background: url(../images/crowd.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 #phone {
@@ -105,7 +106,7 @@ body {
 
 .how-works-feat h3 {
         text-align: center;
-    }
+}
 
 
 
